--- a/src/global.css
+++ b/src/global.css
@@ -1,14 +1,4 @@
-@font-face {
-    font-family: 'baseFont';
-    src: url('/dist/fonts/Montserrat-Regular.ttf'); /* Safari, Android, iOS */
-}
-
-@font-face {
-    font-family: 'baseFontBold';
-    src: url('/dist/fonts/Montserrat-Bold.ttf'); /* Safari, Android, iOS */
-}
-
 .globalStyles{
-    font-family: 'baseFont';
+    composes: baseFont from "./css-components/fonts.css";
     font-size: 15px;
 }
