--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -1,111 +1,74 @@
-.main {
-  position: absolute;
-  background: $lightred;
-  top: 50%;
-  left: 50%;
-  width: 40%;
-  max-width: 30em;
-  min-width: 15em;
-  transform: translate(-50%, -50%);
-  overflow: hidden
-}
+@value acuoAction from './../../css-components/colors.css';
 
-.main .title {
-  color: #fff;
-  background: $darkred;
-  text-align: center;
-  font-weight: 700;
-  line-height: 1.2em;
-  padding: 1em;
-}
-.section {
-  position: relative;
+table{
   width: 100%;
-  border-bottom: 5px solid $darkred;
-  border-left: 2px solid $darkred;
-  border-right: 2px solid $darkred;
+  table-layout:fixed;
+  margin-bottom: 10px;
 }
-
-.section button {
-  position: absolute;
-  right: 0;
-  margin: 0;
-  padding: 0;
-  height: 3em;
-  width: 3em;
-  outline: 0;
+table tr th,
+table tr td{
+  padding: 25px 0px 25px 30px;
+  text-align: left;
   border: 0;
-  background: none;
-  text-indent: -9999%;
-  pointer-events: none;
-}
-
-.section button::before{
-  content: 'asdasda';
-  display: block;
-  position: absolute;
-  height: 12px;
-  width: 4px;
-  border-radius: .3em;
-  background: #ee0c4b;
-  transform-origin: 50%;
-  top: 50%;
-  left: 50%;
-  transition: all .25s ease-in-out;
-  transform: translate(75%, -50%) rotate(45deg);
-}
-
-.section button::after{
-  content: 'asdasd';
-  display: block;
-  position: absolute;
-  height: 12px;
-  width: 4px;
-  border-radius: .3em;
-  background: #ee0c4b;
-  transform-origin: 50%;
-  top: 50%;
-  left: 50%;
-  transition: all .25s ease-in-out;
-  transform: translate(-75%, -50%) rotate(-45deg);
-
-}
-
-.sectionClose .articlewrap {
-  height: 0;
-  overflow: hidden;
-  transition: all .2s ease-in;
-}
-
-.sectionHead {
-  width: 100%;
-  overflow: hidden;
-  background: white;
-  cursor: pointer;
-  font-weight: 700;
-  color: #888;
+  overflow:hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  padding: 1em;
-  padding-right: 2.1em;
 }
-
-.article {
-  padding: 1em;
-  color: #333;
-  line-height: 1.3;
+.marginLeft{
+  padding-left:4%;
 }
-
-.sectionOpen button::before {
-      height: 14px;
-      transform: translate(0%, -50%) rotate(-45deg);
-  }
-.sectionOpen button::after {
-    transform: translate(0%, -50%) rotate(45deg);
-  }
-
-
-.sectionOpen .articlewrap {
-  height: 120px;
-  transition: all .2s ease;
+.head{
+  flex-wrap: nowrap;
+  width:100%;
+  background-color: rgba(78,131,181,0.7);
+  padding: 15px 20px;
+  color: #fff;
+}
+.tableBody{
+  max-height:0;
+  width: 100%;
+}
+.table{
+  background-color: #D1D6DC;
+}
+.arrowRight{
+  position: relative;
+  flex: 2;
+  flex-grow: 1;
+}
+.arrowRight::before{
+  content: '';
+  border-top: 10px solid transparent;
+  border-left: 10px solid #fff;
+  border-bottom: 10px solid transparent;
+  position: absolute;
+  top:25.6%;
+  left:-10%;
+}
+.arrowRight::after{
+  content: '';
+  border-top: 10px solid transparent ;
+  border-left: 10px solid acuoAction;
+  border-bottom: 10px solid transparent;
+  position: absolute;
+  top:25.6%;
+  left:-23.3%
+}
+.actionHeader{
+  height: 40px;
+  width: 150px;
+  font-size: 11px;
+  background-color:acuoAction;
+  font-weight:normal;
+  text-align: left;
+  display: flex;
+}
+.action{
+  padding: 10px 15px;
+  align-content: center;
+  flex: 1;
+  flex-grow: 2;
+}
+.items{
+  padding:5px
 }
