--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -1,74 +1,135 @@
 @value acuoAction from './../../css-components/colors.css';
 
-table{
-  width: 100%;
-  table-layout:fixed;
-  margin-bottom: 10px;
-}
-table tr th,
-table tr td{
-  padding: 25px 0px 25px 30px;
-  text-align: left;
-  border: 0;
-  overflow:hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-.marginLeft{
-  padding-left:4%;
-}
-.head{
-  flex-wrap: nowrap;
-  width:100%;
-  background-color: rgba(78,131,181,0.7);
-  padding: 15px 20px;
-  color: #fff;
-}
-.tableBody{
-  max-height:0;
-  width: 100%;
-}
 .table{
-  background-color: #D1D6DC;
+  display:flex;
+  justify-content: space-between;
+  background-color: rgba(78,131,181,0.7);
+  padding: 10px 25px;
+  font-size: 15px;
+  color:#fff;
+  margin-bottom: 2px;
 }
-.arrowRight{
+.vertiCenter{
+  display: table;
+  height: 100%;
+  text-align: center;
+}
+.tableItem{
+  width:7.5%;
+  padding: 0px 2%;
+}
+.derivItem{
+  width:12.5%
+}
+.cptyItem{
+  width:27.5%;
+}
+.innerItem{
+  width:17.5%
+}
+.marginItem{
+  width:25%
+}
+.marginRow{
+  width:23%
+}
+.listItem{
+  width:4%;
+}
+.outerItem{
+  flex-grow:1;
+}
+.vertiCenter{
+    display: table;
+    height: 100%;
+    text-align: center;
+}
+.centerThis{
+    display: table-cell;
+    vertical-align: middle;
+}
+.margin{
+  line-height: 25px;
+}
+.leftThis{
+  float:left;
+  position:relative;
+  font-family: baseFontBold
+}
+.actionVertiCenter{
+  float: right;
+  composes: vertiCenter;
+  width: 190px;
   position: relative;
-  flex: 2;
-  flex-grow: 1;
 }
-.arrowRight::before{
+.actions{
+  position: relative;
+  text-transform: uppercase;
+  font-size: 12.5px;
+  background-color: #1b558b;
+  padding:8px;
+  display: flex;
+}
+.actionItem{
+  width:18%;
+}
+.actionItem .text{
+  padding: 10px;
+  flex: 1;
+  flex-grow: 6;
+}
+.actionItem .arrow{
+  flex: 2;
+  border-left: 1px solid black;
+  position: relative;
+}
+.actionItem .arrow::before{
   content: '';
   border-top: 10px solid transparent;
   border-left: 10px solid #fff;
   border-bottom: 10px solid transparent;
   position: absolute;
-  top:25.6%;
-  left:-10%;
+  top: 18%;
+  right: 15%;
 }
-.arrowRight::after{
+.actionItem .arrow::after{
   content: '';
-  border-top: 10px solid transparent ;
-  border-left: 10px solid acuoAction;
+  border-top: 10px solid transparent;
+  border-left: 10px solid #1b558b;
   border-bottom: 10px solid transparent;
   position: absolute;
-  top:25.6%;
-  left:-23.3%
+  top: 18%;
+  right: 24%;
 }
-.actionHeader{
-  height: 40px;
-  width: 150px;
-  font-size: 11px;
-  background-color:acuoAction;
-  font-weight:normal;
-  text-align: left;
-  display: flex;
+.tableBody{
+  display:flex;
+  background-color: #D1D6DC;
+  padding:2px 25px;
 }
-.action{
-  padding: 10px 15px;
-  align-content: center;
-  flex: 1;
-  flex-grow: 2;
+.tableRow{
+  display:flex;
+  background-color:#fff;
+  padding:2px 25px;
+  border-bottom:1px solid #D1D6DC;
 }
-.items{
-  padding:5px
+.bodyItem{
+  width:20%;
+  padding: 1% 0;
+}
+.divMid{
+  flex-grow:2;
+  display:flex;
+  flex-direction:row;
+}
+.sectionClose{
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.7s ease-in;
+  opacity: 0;
+}
+.sectionOpen{
+  opacity: 1;
+  transition: 0.7s ease-out;
+  overflow:hidden;
+  max-height:1000px;
 }
