--- a/src/components/dashboard/filters/filter.css
+++ b/src/components/dashboard/filters/filter.css
@@ -1,7 +1,7 @@
 @value acuoAction from './../../../css-components/colors.css';
 
 .filterContainer{
-    background-color: #d5dadf;
+    background-color: #fff;
     font-size: 13px;
     display: block;
     padding: 8px 8px;
@@ -28,6 +28,7 @@
     height: 34px;
     border: none;
     padding: 0 8px;
+    border: 1px solid #494949;
     -webkit-border-radius: 0;
     border-radius: 0;
     -webkit-appearance: none;
