--- a/src/css-components/fonts.css
+++ b/src/css-components/fonts.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'baseFont';
-    src: url('/dist/fonts/Montserrat-Regular.ttf'); /* Safari, Android, iOS */
+    src: url('/fonts/Montserrat-Regular.ttf'); /* Safari, Android, iOS */
 }
 
 @font-face {
     font-family: 'baseFontBold';
-    src: url('/dist/fonts/Montserrat-Bold.ttf'); /* Safari, Android, iOS */
+    src: url('/fonts/Montserrat-Bold.ttf'); /* Safari, Android, iOS */
 }
 
 .baseFont {
