--- a/src/components/dashboard/filters/filter.css
+++ b/src/components/dashboard/filters/filter.css
@@ -1,10 +1,21 @@
 @value acuoAction from './../../../css-components/colors.css';
+@value acuoGrey from './../../../css-components/colors.css';
 
 .filterContainer{
     background-color: #fff;
     font-size: 13px;
     display: block;
     padding: 8px 8px;
+}
+
+.filterContainer .filterBarName{
+    display: block;
+    position: relative;
+    width: 80px;
+    padding:6px 6px;
+    margin-bottom: 10px;
+    font-size: 1.4em;
+    color: acuoGrey;
 }
 
 .filterContainer .filterItem{
