--- a/src/css-components/fonts.css
+++ b/src/css-components/fonts.css
@@ -1,17 +1,18 @@
 @font-face {
-    font-family: 'baseFont';
-    src: url('/fonts/Montserrat-Regular.ttf'); /* Safari, Android, iOS */
+  font-family: 'baseFont';
+  src: url('/fonts/Montserrat-Regular.ttf'); /* Safari, Android, iOS */
 }
 
 @font-face {
-    font-family: 'baseFontBold';
-    src: url('/fonts/Montserrat-Bold.ttf'); /* Safari, Android, iOS */
+  font-family: 'baseFontBold';
+  src: url('/fonts/Montserrat-Bold.ttf'); /* Safari, Android, iOS */
 }
 
 .baseFont {
-    font-family: 'baseFont';
+  font-family: 'Helvetica', 'Arial';
 }
 
 .baseFontBold{
-    font-family: 'baseFontBold';
+  font-family: 'Helvetica', 'Arial';
+  font-weight: bold;
 }
