recon page structure and css refined for dashboard page

--- a/src/css-components/colors.css
+++ b/src/css-components/colors.css
@@ -1,3 +1,7 @@
 @value acuoBlue: #4e83b5;
 @value acuoAction: #00376C;
 @value acuoGrey: #5c5b5c;
+
+@value acuoActionRed: #DE2424;
+@value acuoActionOrange: #FA7528;
+@value acuoActionGreen: #11BF0B;
