--- a/src/components/shared/filters/filter.css
+++ b/src/components/shared/filters/filter.css
@@ -5,7 +5,7 @@
     background-color: #fff;
     font-size: 13px;
     display: block;
-    padding: 8px 8px;
+    padding: 8px 18px;
 }
 
 .filterContainer .filterBarName{
@@ -13,7 +13,7 @@
     position: relative;
     width: 80px;
     padding:6px 6px;
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
     font-size: 1.4em;
     color: acuoGrey;
     cursor: pointer;
@@ -30,11 +30,6 @@
     width: 16px;
     height: 12px;
     top: 0px;
-    /*-webkit-transition: all 0.5s ease;*/
-    /*-moz-transition: all 0.5s ease;*/
-    /*-ms-transition: all 0.5s ease;*/
-    /*-o-transition: all 0.5s ease;*/
-    /*transition: all 0.5s ease;*/
 }
 .filterContainer .filterBarName.open .switchArrow{
     -moz-transform: rotate(0deg);
