--- a/src/css-components/fonts.css
+++ b/src/css-components/fonts.css
@@ -1,12 +1,13 @@
-@font-face {
-  font-family: 'baseFont';
-  src: url('/fonts/Montserrat-Regular.ttf'); /* Safari, Android, iOS */
-}
+/*@font-face {*/
+  /*font-family: 'baseFont';*/
+  /*src: url('/fonts/Montserrat-Regular.ttf'); !* Safari, Android, iOS *!*/
+/*}*/
 
-@font-face {
-  font-family: 'baseFontBold';
-  src: url('/fonts/Montserrat-Bold.ttf'); /* Safari, Android, iOS */
-}
+/*@font-face {*/
+  /*font-family: 'baseFontBold';*/
+  /*src: url('/fonts/Montserrat-Bold.ttf'); !* Safari, Android, iOS *!*/
+/*}*/
+
 
 .baseFont {
   font-family: 'Helvetica', 'Arial';
