--- a/src/components/reconcile/actions/actions.css
+++ b/src/components/reconcile/actions/actions.css
@@ -100,6 +100,12 @@
 
 .sectionText{
     font-weight: bold;
+    margin-top: 12px;
+}
+
+.sectionRow{
+    display:flex;
+    padding:7px 0;
 }
 .legalEntityContainer{
     color:#9b9b9b;
