--- a/src/components/reconcile/actions/actions.css
+++ b/src/components/reconcile/actions/actions.css
@@ -35,10 +35,11 @@
 .actionWrap .actPanel.act_C{
     flex: 1;
     align-items: stretch;
+    margin: auto;
     /*border: 1px dotted #2b3c4c;*/
 }
 .actionWrap .actPanel.act_C .btnWrap{
-    margin: 40% auto auto auto;
+    margin: 0 auto;
     /*border: 1px dotted #c00;*/
 }
 .actionWrap .actPanel.act_C .btnWrap .actFig{
