added space between panel rows (top & bottom)

--- a/src/components/reconcile/actions/actions.css
+++ b/src/components/reconcile/actions/actions.css
@@ -24,6 +24,8 @@
     width: 100%;
     /*min-height: 100px;*/
     clear: both;
+    margin-top: 25px;
+    margin-bottom: 50px;
     /*border: 1px dotted #00f;*/
 }
 
