--- a/src/components/reconcile/actions/actions.css
+++ b/src/components/reconcile/actions/actions.css
@@ -24,8 +24,7 @@
     width: 100%;
     /*min-height: 100px;*/
     clear: both;
-    margin-top: 25px;
-    margin-bottom: 50px;
+    padding: 30px 0;
     /*border: 1px dotted #00f;*/
 }
 
@@ -146,42 +145,15 @@
     display: flex;
     align-content: flex-start;
     flex:3;
-    padding: 3px 0;
-}
-.packageLeft .packageCheckBox{
-    /*padding: 3px 4px 3px 10px;*/
-}
-.packageLeft .packageCheckBox.hide{
-    opacity: 0;
-    pointer-events: none; /** when the checkbox is hidden, set it unclickable. **/
-}
-.packageLeft .packageCheckBox.show{
-    opacity: 1;
 }
 
 .packageRight{
     flex:1;
-    padding: 3px 0;
 }
 
 .packageLeft div{
     padding-left: 10px;
 }
-
-
-/*--------- 2nd level packageRow -------------*/
-.packageLvl2{
-    /*display: flex;*/
-    padding: 4px 4px 4px 18px;
-    /*border: 1px dotted #ccc;*/
-}
-.packageLvl2.hide{
-    display: none;
-}
-.packageLvl2.show{
-    display: block;
-}
-
 
 /*----------css for section right starts here--------------------*/
 
@@ -202,6 +174,9 @@
     padding: 10px;
 }
 
+/*.viewFxRate .toolTip{visibility: hidden}*/
+/*.viewFxRate:hover .toolTip{visibility: visible;}*/
+
 .viewFxRate{
     color:#4A90e2;
     text-align: right;
@@ -209,9 +184,25 @@
     margin-top: 4px;
 }
 
-.viewFxRateImage{
-  padding-left: 8px;
+.viewFxRate .viewFxRateImage{
+  padding: 8px 10px;
+  display: none;
+  text-align: left;
+  color: #9b9b9b;
+  float: left;
+  position: absolute;
+  width: 100px;
+  -webkit-border-radius: 10px 0 10px 10px;
+  border-radius: 10px 0 10px 10px;
+  border:1px solid #c9c9c9;
+  background-color: #ffffff;
+  top: 80px;
 }
+.viewFxRate:hover .viewFxRateImage{
+  display: block;
+}
+
+
 .totalMargin{
     text-align: center;
     margin: auto 0;
