--- a/src/components/reconcile/actions/actions.css
+++ b/src/components/reconcile/actions/actions.css
@@ -24,7 +24,8 @@
     width: 100%;
     /*min-height: 100px;*/
     clear: both;
-    padding: 30px 0;
+    margin-top: 25px;
+    margin-bottom: 50px;
     /*border: 1px dotted #00f;*/
 }
 
@@ -140,20 +141,62 @@
     display: flex;
     padding: 3px 0;
 }
+.packageRow .packageLeft,
+.packageRow .packageRight{
+    -webkit-transition: background 0.4s ease;
+    -moz-transition: background 0.4s ease;
+    -ms-transition: background 0.4s ease;
+    -o-transition: background 0.4s ease;
+    transition: background 0.4s ease;
+}
+.packageRow:hover .packageLeft,
+.packageRow:hover .packageRight{
+    background-color: #f9dbd5;
+}
+.packageRow:hover .packageLeft .packageCheckBox{
+    /*background-color: #fff;*/
+}
 
 .packageLeft{
     display: flex;
     align-content: flex-start;
     flex:3;
+    padding: 3px 0;
+}
+.packageLeft .packageCheckBox{
+    /*padding: 3px 4px 3px 10px;*/
+}
+.packageLeft .packageCheckBox.hide{
+    opacity: 0;
+    pointer-events: none; /** when the checkbox is hidden, set it unclickable. **/
+}
+.packageLeft .packageCheckBox.show{
+    opacity: 1;
 }
 
 .packageRight{
     flex:1;
+    padding: 3px 0;
 }
 
 .packageLeft div{
     padding-left: 10px;
 }
+
+
+/*--------- 2nd level packageRow -------------*/
+.packageLvl2{
+    /*display: flex;*/
+    padding: 4px 4px 4px 18px;
+    /*border: 1px dotted #ccc;*/
+}
+.packageLvl2.hide{
+    display: none;
+}
+.packageLvl2.show{
+    display: block;
+}
+
 
 /*----------css for section right starts here--------------------*/
 
