--- a/src/components/dashboard/uploadPortfolio/upload_portfolio.css
+++ b/src/components/dashboard/uploadPortfolio/upload_portfolio.css
@@ -1,4 +1,4 @@
-@value acuoBlue from './../../../css-components/colors.css';
+@value acuoBlue from './../../../static/css-components/colors.css';
 
 
 .titleBar{
