--- a/src/components/dashboard/graph/graph.css
+++ b/src/components/dashboard/graph/graph.css
@@ -1,4 +1,4 @@
-@value acuoAction from './../../../css-components/colors.css';
+@value acuoAction from './../../../static/css-components/colors.css';
 
 #componentId .toolTip{visibility: hidden}
 #componentId:hover .toolTip{visibility: visible;}
