--- a/src/components/reconcile/actions/actions.css
+++ b/src/components/reconcile/actions/actions.css
@@ -1,7 +1,7 @@
-@value acuoGrey from './../../../css-components/colors.css';
-@value acuoActionRed from './../../../css-components/colors.css';
-@value acuoActionOrange from './../../../css-components/colors.css';
-@value acuoActionGreen from './../../../css-components/colors.css';
+@value acuoGrey from './../../../static/css-components/colors.css';
+@value acuoActionRed from './../../../static/css-components/colors.css';
+@value acuoActionOrange from './../../../static/css-components/colors.css';
+@value acuoActionGreen from './../../../static/css-components/colors.css';
 
 .vertiCenter{
     display: table;
