--- a/src/pages/reconcile/reconcile.css
+++ b/src/pages/reconcile/reconcile.css
@@ -1,4 +1,4 @@
-@value acuoGrey from './../../css-components/colors.css';
+@value acuoGrey from './../../static/css-components/colors.css';
 
 .titleBar{
     display: flex;
