OW-30, For filter Time Window, left and right arrow work

--- a/src/components/shared/filters/filter.css
+++ b/src/components/shared/filters/filter.css
@@ -227,6 +227,14 @@
     cursor: pointer;
     /*background-color: #4A90e2;*/
 }
+.filtersList .timeTitle .timeArrowLeft.show,
+.filtersList .timeTitle .timeArrowRight.show{
+    display: inline-block;
+}
+.filtersList .timeTitle .timeArrowLeft.hide,
+.filtersList .timeTitle .timeArrowRight.hide{
+    display: none;
+}
 
 .timeSlot{
     text-align: center;
